--- a/production/monitoring-proxmox/02-scrape-job.yaml
+++ b/production/monitoring-proxmox/02-scrape-job.yaml
@@ -10,4 +10,4 @@ spec:
     metricsPath: /pve
     params:
         target:
-            - pve-node-01.local.lan
+            - pve-node-01.internal.untouchedwagons.com
