Fixed some indenting Added more prometheus scrape jobs

--- a/production/monitoring-proxmox/02-scrape-job.yaml
+++ b/production/monitoring-proxmox/02-scrape-job.yaml
@@ -1,13 +1,17 @@
 apiVersion: monitoring.coreos.com/v1alpha1
 kind: ScrapeConfig
 metadata:
-    name: proxmox-exporter
-    namespace: monitoring
+  name: proxmox-exporter
+  namespace: monitoring
 spec:
-    staticConfigs:
-        - targets:
-            - proxmox-exporter.monitoring-proxmox.svc.cluster.local:9221
-    metricsPath: /pve
-    params:
-        target:
-            - pve-node-01.internal.untouchedwagons.com
+  relabelings:
+    - action: replace
+      replacement: 'pve-node-01.internal.untouchedwagons.com'
+      targetLabel: instance
+  staticConfigs:
+    - targets:
+        - proxmox-exporter.monitoring-proxmox.svc.cluster.local:9221
+  metricsPath: /pve
+  params:
+    target:
+      - pve-node-01.internal.untouchedwagons.com
