--- a/production/services/09-ddclient.yaml
+++ b/production/services/09-ddclient.yaml
@@ -20,17 +20,9 @@ spec:
       labels:
         app: ddclient
     spec:
-      securityContext:
-        fsGroup: 30000
       containers:
         - name: ddclient
-          image: linuxserver/ddclient:3.11.2
-          securityContext:
-            allowPrivilegeEscalation: false
-            capabilities:
-              drop:
-              - all
-              add: ['CHOWN', 'FOWNER', 'SETGID', 'SETUID']
+          image: matthewhuie/ddclient:2ea45fd
           resources:
             limits:
               memory: 256Mi
@@ -38,44 +30,12 @@ spec:
             requests:
               memory: 64Mi
               cpu: "0.1"
-          env:
-            - name: PUID
-              value: "30000"
-            - name: PGID
-              value: "30000"
-            - name: TZ
-              value: "America/Toronto"
           volumeMounts:
-            - mountPath: /config
+            - mountPath: /etc/ddclient/ddclient.conf
               name: ddclient-config
-        - name: backup
-          image: untouchedwagons/simple-backup:1.0.4
-          resources:
-            limits:
-              memory: 256Mi
-              cpu: "1"
-            requests:
-              memory: 128Mi
-              cpu: "0.2"
-          volumeMounts:
-            - mountPath: /data
-              name: ddclient-config
-            - mountPath: /backups
-              name: backups
-          env:
-            - name: BACKUP_APPEND_DIRECTORY
-              value: "/kubernetes/production/ddclient"
-            - name: BACKUP_BASE_NAME
-              value: "ddclient"
-            - name: BACKUP_RETENTION
-              value: "24"
-            - name: BACKUP_FREQUENCY
-              value: "0 0 * * *"
+              subPath: ddclient.conf
+
       volumes:
         - name: ddclient-config
-          persistentVolumeClaim:
-            claimName: ddclient-config
-        - name: backups
-          nfs:
-            server: 192.168.0.30
-            path: /mnt/tank/Media/Backups
+          configMap:
+              name: ddclient
