--- a/production/servarr/radarr/service.yaml
+++ b/production/servarr/radarr/service.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: radarr
-  namespace: default
+  namespace: servarr
   labels:
     app: radarr
 spec:
@@ -22,6 +22,20 @@ spec:
     spec:
       securityContext:
         fsGroup: 30000
+      initContainers:
+        - name: init-db
+          image: ghcr.io/onedr0p/postgres-init:15.5
+          env:
+            - name: INIT_POSTGRES_HOST
+              value: "postgresql.database.svc.cluster.local"
+            - name: INIT_POSTGRES_USER
+              value: "radarr"
+            - name: INIT_POSTGRES_PASS
+              value: "ReptileBubbleKissConversion"
+            - name: INIT_POSTGRES_DBNAME
+              value: "radarr-main radarr-logs"
+            - name: INIT_POSTGRES_SUPER_PASS
+              value: "TrembleBulwarkBeautifulGossip"
       containers:
         - name: radarr
           image: ghcr.io/onedr0p/radarr:5.1.3.8246
@@ -31,6 +45,23 @@ spec:
               drop:
               - all
               add: ['CHOWN', 'FOWNER', 'SETGID', 'SETUID']
+          env:
+            - name: RADARR__API_KEY
+              value: "0416a6d418be4cd7b9b64e3862aa436a"
+            - name: RADARR__AUTHENTICATION_METHOD
+              value: "Forms"
+            - name: RADARR__AUTHENTICATION_REQUIRED
+              value: "DisabledForLocalAddresses"
+            - name: RADARR__POSTGRES_HOST
+              value: "postgresql.database.svc.cluster.local"
+            - name: RADARR__POSTGRES_MAIN_DB
+              value: "radarr-main"
+            - name: RADARR__POSTGRES_LOG_DB
+              value: "radarr-logs"
+            - name: RADARR__POSTGRES_USER
+              value: "radarr"
+            - name: RADARR__POSTGRES_PASSWORD
+              value: "ReptileBubbleKissConversion"
           resources:
             limits:
               memory: 1Gi
@@ -47,29 +78,6 @@ spec:
               name: torrents
             - mountPath: /mnt/data/Usenet
               name: usenet
-        - name: backup
-          image: untouchedwagons/simple-backup:1.0.4
-          resources:
-            limits:
-              memory: 256Mi
-              cpu: "1"
-            requests:
-              memory: 128Mi
-              cpu: "0.2"
-          volumeMounts:
-            - mountPath: /data
-              name: radarr-config
-            - mountPath: /backups
-              name: backups
-          env:
-            - name: BACKUP_APPEND_DIRECTORY
-              value: "/kubernetes/production/radarr"
-            - name: BACKUP_BASE_NAME
-              value: "radarr"
-            - name: BACKUP_RETENTION
-              value: "24"
-            - name: BACKUP_FREQUENCY
-              value: "0 */4 * * *"
       volumes:
         - name: radarr-config
           persistentVolumeClaim:
@@ -95,7 +103,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: radarr
-  namespace: default
+  namespace: servarr
 spec:
   selector:
     app: radarr
@@ -108,7 +116,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: radarr
-  namespace: default
+  namespace: servarr
   annotations:
     traefik.ingress.kubernetes.io/frontend-entry-points: http,https
     traefik.ingress.kubernetes.io/router.tls: "true"
