--- a/production/default/sabnzbd/volume.yaml
+++ b/production/default/sabnzbd/volume.yaml
@@ -2,41 +2,43 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: qbittorrent-config
+  name: sabnzbd-config
   namespace: default
 spec:
   accessModes:
-    - ReadWriteMany
-  storageClassName: longhorn
+    - ReadWriteOnce
+  storageClassName: freenas-iscsi-csi
   resources:
     requests:
-      storage: 2Gi
+      storage: 1Gi
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: qbittorrent-vol-restore
+  name: sabnzbd-vol-restore
 spec:
   ttlSecondsAfterFinished: 10
   template:
     spec:
+      securityContext:
+        fsGroup: 568
       containers:
       - name: restore
         image: untouchedwagons/simple-restore:1.0.2
         volumeMounts:
           - mountPath: /data
-            name: qbittorrent-config
+            name: sabnzbd-config
           - mountPath: /backups
             name: backups
         env:
           - name: BACKUP_APPEND_DIRECTORY
-            value: "/kubernetes/production/qbittorrent"
+            value: "/kubernetes/production/sabnzbd"
           - name: BACKUP_BASE_NAME
-            value: "qbittorrent"
+            value: "sabnzbd"
       volumes:
-        - name: qbittorrent-config
+        - name: sabnzbd-config
           persistentVolumeClaim:
-            claimName: qbittorrent-config
+            claimName: sabnzbd-config
         - name: backups
           nfs:
             server: 192.168.0.30
