--- a/production/networking/ispyagentdvr/service.yaml
+++ b/production/networking/ispyagentdvr/service.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: ispyagentdvr
-  namespace: default
+  namespace: networking
   labels:
     app: ispyagentdvr
 spec:
@@ -20,11 +20,9 @@ spec:
       labels:
         app: ispyagentdvr
     spec:
-      securityContext:
-        fsGroup: 30000
       containers:
         - name: ispyagentdvr
-          image: doitandbedone/ispyagentdvr:5.0.2.0
+          image: doitandbedone/ispyagentdvr:5.1.4.0
           resources:
             requests:
               memory: 256Mi
@@ -81,7 +79,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ispyagentdvr
-  namespace: default
+  namespace: networking
 spec:
   type: LoadBalancer
   loadBalancerIP: 192.168.0.218
