--- a/production/monitoring/exporter-opnsense/service.yaml
+++ b/production/monitoring/exporter-opnsense/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: monitoring.coreos.com/v1alpha1
 kind: ScrapeConfig
 metadata:
-  name: linux-exporter
+  name: exporter-opnsense
   namespace: monitoring
 spec:
   relabelings:
@@ -12,7 +12,4 @@ spec:
       targetLabel: instance
   staticConfigs:
     - targets:
-      - nut.internal.untouchedwagons.com:9100
-      - netboot.internal.untouchedwagons.com:9100
-      - vault.internal.untouchedwagons.com:9100
-      - pve-node-01.internal.untouchedwagons.com:9100
+        - opnsense.internal.untouchedwagons.com:9100
